# sobbets

./: .gitignore  Cargo.toml  README.md
cpp-socket/: .clang-format  .clangd  meson.build
cpp-socket/src/: main.cpp
go-scoket-cmd-frontend/: go.mod
go-socket-cmd-backend/: go.mod  main.go
go-socket-cmd-frontend/: main.go
rust-socket/: .gitignore  Cargo.toml
rust-socket-cmd-backend/: Cargo.toml
rust-socket/src/: main.rs
simple-go-ssh/: main.go
src/: main.rs
